--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,27 @@
     <link rel="import" href="../fs-overflow-menu.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
+      fs-overflow-menu ul {
+        margin: 0px;
+        padding: 0px;
+        list-style-type: none;
+      }
+
+      fs-overflow-menu ul li {
+        padding: 10px;
+        padding-right: 20px;
+        border-bottom: 1px solid #ECEBEA;
+      }
+
+      fs-overflow-menu ul li:hover {
+        cursor: pointer;
+      }
+
+      fs-overflow-menu ul li[active] {
+        background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20version%3D%221.2%22%20baseProfile%3D%22tiny%22%20x%3D%220%22%20y%3D%220%22%20width%3D%2215%22%20height%3D%2215%22%20viewBox%3D%220%200%2015%2015%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpolyline%20fill%3D%22none%22%20stroke%3D%22%23333331%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20stroke-miterlimit%3D%2210%22%20points%3D%22%204%208.4%206.8%2011%2011%204%20%22/%3E%3Crect%20fill%3D%22none%22%20width%3D%2215%22%20height%3D%2215%22/%3E%3C/svg%3E');
+        background-repeat: no-repeat;
+        background-position: 95% center;
+      }
     </style>
   </head>
   <body>
@@ -34,29 +55,31 @@
         </fs-overflow-menu>
 
         <script>
-          var menu = document.querySelector('#menu-one');
-          var button = document.querySelector('button');
+          document.addEventListener('WebComponentsReady', function(){
+            var menu = document.querySelector('#menu-one');
+            var button = document.querySelector('button');
 
-          //Position the menu relative to the button
-          menu.positionMenu({
-            target: button
-          });
+            //Position the menu relative to the button
+            menu.positionMenu({
+              target: button
+            });
 
-          //Set up the button to trigger the menu
-          var showMenu = function(){
-            menu.toggle();
-          }
-          button.addEventListener('tap', showMenu);
+            //Set up the button to trigger the menu
+            var showMenu = function(){
+              menu.toggle();
+            }
+            button.addEventListener('tap', showMenu);
 
-          //Toggle a checkmark icon when a list item is clicked
-          Array.prototype.forEach.call(document.getElementsByTagName('li'), function(el){
-            el.addEventListener('tap', function(){
-              if(el.getAttribute('active') || el.getAttribute('active') === ''){
-                el.removeAttribute('active');
-              } else {
-                el.setAttribute('active', '');
-              }
-            })
+            //Toggle a checkmark icon when a list item is clicked
+            Array.prototype.forEach.call(document.getElementsByTagName('li'), function(el){
+              el.addEventListener('tap', function(){
+                if(el.getAttribute('active') || el.getAttribute('active') === ''){
+                  el.removeAttribute('active');
+                } else {
+                  el.setAttribute('active', '');
+                }
+              })
+            });
           });
         </script>
 
@@ -80,8 +103,10 @@
           </fs-overflow-menu>
 
           <script>
-            document.getElementById('clickable-area').addEventListener('tap', function(event){
-              document.getElementById('menu-two').showContextMenu({x:event.detail.sourceEvent.pageX, y:event.detail.sourceEvent.pageY});
+            document.addEventListener('WebComponentsReady', function(){
+              document.getElementById('clickable-area').addEventListener('tap', function(event){
+                document.getElementById('menu-two').showContextMenu({x:event.detail.sourceEvent.pageX, y:event.detail.sourceEvent.pageY});
+              });
             });
           </script>
 
