--- a/fs-overflow-menu.html
+++ b/fs-overflow-menu.html
@@ -500,7 +500,7 @@ Example:
         params.isMobile = false;
       }
       this._isMobile = params.isMobile;
-      if (params.isMobile) this.dropPosition = "LEFT"
+      if (params.isMobile) this.dropPosition = "LEFT";
 
       this.isContextMenu = false;
       this._fireHideMenuEvent();
